# gromosXX

./: .gitignore  .gitlab-ci.yml  CONSTRAINT_IMPLEMENTATION_STATUS.md  Cargo.toml  Config.sh  GROMOS_FEATURES_CATALOG.md  GROMOS_PLUSPLUS_INTEGRATION.md  GROMOS_TRANSLATION_EVALUATION.md  IMPLEMENTATION_GUIDE.md  PARALLELIZATION_ANALYSIS.md  PYTHON_API_DESIGN.md  PYTHON_API_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PYTHON_API.md  RUST_PORT_STRATEGY.md  RUST_PORT_SUMMARY.md  RUST_TRANSLATION_COMPLETE.md  STOCHASTIC_DYNAMICS_ANALYSIS.md  STOCHASTIC_DYNAMICS_CODE_REFERENCE.md  STOCHASTIC_DYNAMICS_PORT_GUIDE.md  TEST_RESULTS.md  TEST_SUMMARY.md  TUTORIAL_COMPATIBILITY_PLAN.md  VALIDATION_PLAN.md  VERSION  acinclude.m4  configure.in
ddmd/: Makefile.am  VERSION  acinclude.m4  configure.in  gmath.cc  gmath.h  stdheader.h
ddmd/io/: argument.cc  argument.h  blockinput.cc  blockinput.h  ifp.h  in_parameter.cc  in_parameter.h  instream.cc  instream.h  message.cc  message.h  read_input.cc  read_input.h  usage.cc  usage.h
ddmd/md/: ddmd.cc
ddmd/simulation/: multibath.cc  multibath.h  parameter.h  simulation.cc  simulation.h
gromos-rs/: .gitignore  ADVANCED_SAMPLING_ARCHITECTURE.md  Cargo.toml  README.md  build.rs  cbindgen.toml  gromos_rs.h
gromos-rs/examples/: cpp_integration_example.cpp
gromos-rs/src/: configuration.rs  eds.rs  fep.rs  ffi.rs  gamd.rs  integrator.rs  interaction.rs  io.rs  lib.rs  logging.rs  math.rs  pairlist.rs  remd.rs  replica.rs  selection.rs  topology.rs  validation.rs
gromos-rs/tests/: comprehensive_tests.rs  io_integration_tests.rs  md_advanced_features_tests.rs  md_binary_integration_tests.rs  md_binary_tests.rs  md_integration_tests.rs  mk_script_tests.rs  validation.rs
gromosPlusPlus/gromos++/: .gitignore  ChangeLog  Config.sh  Makefile.am  README  VERSION  acinclude.m4  configure.ac
gromosXX/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Config.sh  INSTALL  Makefile.am  README  TODO  VERSION  acinclude.m4  config.h.in  configure.ac  configure.in  doxygen.conf  get-doxygen.py
gromosXX/check/: Makefile.am  check.h  math.t.cc  simple.cc  simulation.t.cc
gromosXX/cmake/: config.h.in  configure.cmake  external_libraries.cmake  options.cmake
gromosXX/contrib/: Makefile  Makefile.am  out  rep_rewrite.cc  repana.cc  repex.py  rng_gsl.cc  script.py  split_frame.cc  splitter.cc  tabulate_spc.cc  unlock_features.pl
gromosXX/data/: Makefile.am  ene_ana.md++.lib  schnet.yml
gromosXX/doc/: HOOMD_GROMOSXX_interface.lyx  arguments.doxy  arguments.html  dihres.doxy  dihres.html  disres.doxy  disres.html  distanceres.html  doxygen.conf  doxygen.conf.in  generate_snippets.py  gromosXX.tex  index.html  input.doxy  input.html  install.html  jval.doxy  jval.html  main.doxy  newinput.txt  output.doxy  output.html  posres.doxy  posres.html  pttopo.doxy  pttopo.html  release.doxy  release.html  tail.html
gromosXX/documentation/: NEWINPUT
gromosXX/nightly/: distcheck.sh  nightly.sh  options.Linux_i686  options.SunOS_i86pc  options.SunOS_sun4u  options.all  options.gromos++  options.gromosXX  pkg_debian.sh  pkg_debian_fakeroot.sh  pkg_solaris.sh  pkg_solaris_fakeroot.sh  prepare.sh  setup_chroot.sh
gromosXX/packaging/: PACKAGING  copyright  debian.control  debian.depend  solaris.depend  solaris.pkginfo
gromosXX/program/: BUILD_NUMBER  CMakeLists.txt  Makefile.am  create_forcefield.h  eds_2box.cc  eds_2box_mpi.cc  fasti.cc  fasti.h  flexi.cc  flexi.h  md.cc  md_mpi.cc  mg.cc  repex.cc  repex_mpi.cc  repex_mpi_1.cc  scali.cc  script.cc  vtest.cc
gromosXX/src/: .swp  CMakeLists.txt  Makefile.am  c  debug.cc  debug.h  namespaces.doxy  stdheader.h  timing.cc
md++/: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  INSTALL  Makefile.am  VERSION  acinclude.m4  configure.ac  get-doxygen.py
md++/cmake/: config.h.in  configure.cmake  external_libraries.cmake  options.cmake
md++/conda/: README.md  build.sh  conda_build_config.yaml  env.yaml  meta.yaml
md++/contrib/: Makefile.am  mace_gromos.py  patch-fftw.pl  repex.py  rng_gsl.cc  schnet_v1.py  schnet_v2 20260401.py  schnet_v2 copy.py  schnet_v2.py  schnet_v220260305.py  schnet_v2_20260227.py  schnet_v2_20260303.py  schnet_v2_20260304.py  schnet_v2_20260330.py  schnet_v2_TI_SQ.py  schnet_v2_emle.py  schnet_v2_staticParam.py  split_frame.cc
md++/data/: ene_ana.md++.lib  schnet.yml
md++/doc/: CMakeLists.txt  HOOMD_GROMOSXX_interface.lyx  doxygen.conf  doxygen.conf.in  generate_snippets.py  gromosXX.sty  gromosXX.tex  main.doxy
md++/program/: CMakeLists.txt  Makefile.am  eds_2box.cc  eds_2box_mpi.cc  md.cc  md_mpi.cc  repex_mpi.cc
md++/src/: CMakeLists.txt  Makefile.am  namespaces.doxy  stdheader.h
md++/tools/: root_includes.py
program/: Makefile.am  eds_2box.cc  eds_2box_mpi.cc  md.cc  md_mpi.cc  repex_mpi.cc
program/.svn/: all-wcprops  entries
py-gromos/: API_REFERENCE.md  Cargo.toml  LEARNING_GUIDE.md  README.md  pyproject.toml
py-gromos/examples/: 01_basic_vectors.py  02_system_setup.py  03_integrators.py  04_advanced_sampling.py  05_complete_workflow.py  06_run_standard_md.py  07_run_gamd.py  08_run_eds.py  09_run_remd.py  10_run_ti.py  11_trajectory_analysis.py  13_binary_trajectory_formats.py
py-gromos/notebooks/: 01_understanding_pyo3_bindings.ipynb  02_molecular_systems_and_energy.ipynb  03_performance_deep_dive.ipynb
py-gromos/scripts/: explain_architecture.py  hands_on_demo.py
py-gromos/src/: lib.rs
py-gromos/tests/: test_basic.py
src/: Makefile.am  test.cc
src/.svn/: all-wcprops  dir-prop-base  entries
src/algorithm/: Makefile.am  algorithm.h  create_md_sequence.cc  create_md_sequence.h
src/check/: Makefile.am  aladip_special.t.cc  c16_cg.t.cc  check_forcefield.cc  check_forcefield.h  check_state.cc  lambdas.t.cc  scaling.t.cc
src/configuration/: Makefile.am  average.cc  average.h  configuration.cc  configuration.h  configuration_global.h  energy.cc  energy.h  influence_function.cc  mesh.h  state_properties.cc  state_properties.h
src/cuda/: Makefile.am  c_pairlist.h  cuda_mpi.cc  cuda_mpi.h  cuda_pairlist.cu  gromos_cuda.cc  (+1 more)
(+3130 files in other folders)
